<resources>
    <string name="app_name">LinearCalculator</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="how_was_the_service">how was the service?</string>
    <string name="calculate">Calculate</string>
    <string name="swicth">Switch</string>
    <string name="tip_amount">Amount: $%s</string>
    <string name="service_charges">Service charges</string>
    <string name="label">label</string>
</resources>